syntax = "proto3";

package wearable.v1;

option go_package = "mygrpc/gen/go/wearable/v1;wearablepb";

service WearableService {
  // server side steraming
  rpc BeatsPerMinute(BeatsPerMinuteRequest) returns (stream BeatsPerMinuteResponse) {};
  // client side steraming
  rpc ConsumeBeatsPerMinute(stream ConsumeBeatsPerMinuteRequest) returns (ConsumeBeatsPerMinuteResponse) {};
  // bi-dreictional streaming
  rpc CalculateBeatsPerMinute(stream CalculateBeatsPerMinuteRequest) returns (stream CalculateBeatsPerMinuteResponse);
}


// server side streaming messages
message BeatsPerMinuteRequest {
  string uuid = 1;
}
message BeatsPerMinuteResponse {
  uint32 value  = 1;
  uint32 minute = 2;
}

// client side streaming messages
message ConsumeBeatsPerMinuteRequest {
  string uuid   = 1;
  uint32 value  = 2;
  uint32 minute = 3;
}
message ConsumeBeatsPerMinuteResponse {
  uint32 total = 1;
}
message CalculateBeatsPerMinuteRequest {
  string uuid   = 1;
  uint32 value  = 2;
  uint32 minute = 3;
}

message CalculateBeatsPerMinuteResponse {
  float average = 1;
}